メタデータ追加 文字化け対応1

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=Shift_JIS"/>
+</head>
 <body>
 <h5>はじめまして(｡･ω･｡)</h5>
 </body>
